2003-12-09  Andy <andyp@users.sf.net>

	* added manual to the build. Sweeping changes to the doc/ directory. 
	  Plus, we now depend on scrollkeeper.
	* updated .spec file for more prereqs and scrollkeeper scripts, use
	  generic prefixes per GNOME packaging examples
	* added COPYING-DOCS file
	* updated POTFILES.in to include all source files in src/gnome2
	* added en_GB translation
	* updated typewriter icon to a nice PNG
	* more work on fixing deprecated GNOME / GTK calls
	* reworked the way we do Pango text to make translations easier


2003-12-08  Andy <andyp@users.sf.net>

	* removed old html docs files - they were empty anyway
	* clarified purpose of src/gnome2/dummy.cpp and src/gnome/dummy.cpp.
	  These files force g++ linkage. Added comments inside so that idiots
	  like me don't try to remove them when helpfully "cleaning up" the 
	  source tree :-)
	* updated spec file with better Requires/BuildRequires
	* enabled Help->Contents to actually launch the Help. This needed a
	  patch on gui.c to fix gnome_program_init(), Makefile.am changes, and 
	  a small change in main_menu.c.


2003-12-08  Terry <tbiggs@users.sf.net>

	* bumped to  0.9.dev18
	* added enable-pspell to configure.in (for compatability with systems 
	  that don't have the right gnome-spell) will go away later.


2003-12-07  Andy <andyp@users.sf.net>

	* weekend hackathon :-)
	* replaced all string references to stock icons with the macro 
	  equivalents wherever possible
	* changed GNOME_STOCK_PIXMAP_* and GNOME_STOCK_MENU_* pixmaps 
	  references to the modern equivalents - these are now deprecated
	* gtk_widget_set_usize is now deprecated. Replaced with correct 
	  gtk_widget_set_size_request and fixed -2 -> -1 references
	* comprehensive review of strings: fixed typos, updated, added, 
	  changed around - should be ready for the translators now
	* started to update the preferences dialog. Removed the layout section
	  as this is now done with the session. Removed frames and replaced 